examples/test/testpolicy10690.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10690
  namespace: namespace377
spec:
  podSelector:
    matchLabels:
      key48: value34
      key31: value30
      key28: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value5
      podSelector:
        matchLabels:
          key36: value31
          key9: value28
          key38: value28
